[package]
name = "catgirl_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.9.2"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.19"
tokio = { version = "1.26.0", features = ["macros", "full"] }
